Fixed OXUIB-1177 Logo doesn't fit header in mobile view

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -100,6 +100,12 @@
     .smartphone & {
         line-height: @appcontrol-height-smartphone;
         margin: 0 10px;
+
+        img {
+            margin-top: -2px;
+            position: initial;
+            top: auto;
+        }
     }
 
     img {
@@ -135,6 +141,8 @@ html:not(.smartphone) #io-ox-appcontrol #io-ox-toprightbar #io-ox-launcher .laun
     padding: 0;
     display: flex;
     align-content: center;
+
+
 
     .smartphone & {
         height: @appcontrol-height-smartphone;
